--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev --port 4322",
     "start": "astro dev --port 4322",
-    "build": "astro build",
+    "build": "npx prisma generate && astro build",
     "preview": "astro preview --port 4322"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "@astrojs/react": "^3.3.1",
     "@astrojs/tailwind": "^5.1.0",
     "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^6.19.2",
     "astro": "^4.5.0",
     "bcryptjs": "^2.4.3",
     "pg": "^8.11.5",
@@ -22,7 +23,6 @@
     "@astrojs/netlify": "^4.1.1"
   },
   "devDependencies": {
-    "@prisma/client": "^6.19.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
