--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "socket.io-client": "^4.7.2",
-    "zod": "^3.22.4",
-    "@astrojs/netlify": "^4.1.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@astrojs/netlify": "^4.1.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
