--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "socket.io-client": "^4.7.2",
-    "zod": "^3.22.4",
-    "@astrojs/netlify": "^4.1.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
